fixed overflow issue causing the page to have a side scroll effect on mobile viewports

--- a/css/tank.css
+++ b/css/tank.css
@@ -1206,6 +1206,10 @@ p {
 	margin-top: 2rem;
 	position: relative;
 	z-index: 1;
+	width: 100%;
+	overflow: hidden;
+	padding: 0 1rem;
+	box-sizing: border-box;
 }
 
 @media (min-width: 1024px) {
